--- a/html5-css3-curso-em-video/modulo1/d005/index.html
+++ b/html5-css3-curso-em-video/modulo1/d005/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://kit.fontawesome.com/52fe62128f.js" crossorigin="anonymous"></script>
-
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <title>Social</title>
 </head>
 <body>
